--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,18 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>20</java.version>
 	</properties>
+	<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.11.0</version>
+    <configuration>
+        <source>20</source>
+        <target>20</target>
+        <release>20</release>
+    </configuration>
+</plugin>
 	<dependencies>
 	<dependency>
     <groupId>org.springframework.boot</groupId>
